# docling-japanese-books

./: .gitignore  CHUNKING_STRATEGIES_COMPLETE_GUIDE.md  LICENSE  README.md  VDB_PROVIDER_COMPARISON.md  docker-compose.yaml  embedding_evaluation_results.json  embedding_evaluation_snowflake_results.json  pyproject.toml
.github/workflows/: ci.yml
examples/: chunking_strategy_comparison.py
scripts/: __init__.py  evaluate_all_chunking_strategies.py  evaluate_snowflake_arctic.py  quantization_analysis.py
src/docling_japanese_books/: __init__.py  cli.py  config.py  downloader.py  embedding_evaluation.py  enhanced_chunking.py  enhanced_config.py  image_processor.py  late_chunking.py  processor.py  query.py  vector_db.py
tests/: run_basic_tests.py  test_basic.py  test_cli.py  test_config.py  test_config_enhanced.py  test_image_processor.py  test_minimal.py  test_simple.py  test_utilities.py
